update with sample data

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
 	  <img src="images/HenryYim_3.JPG" alt="Henry Yim">
 	  <h1>Henry Yim</h1>
-	  <h2>Vice President - Application Support Service – Market Risk and Prime Brokerage Margin Technology</h2>
-	  <p>Henry Yim is the Application Support Service (APS) Market Risk and Prime Brokerage (PB) Margin team lead in Asia Pacific working closely with the Global team and is leading the APAC APS team in HK and India to maintain the stability of the Market Risk and PB Margin applications, providing support on application batches as well as dealing with user/business inquiries or requests, and handling Incident, Request, Change and Problem Management in the region.</p>
+	  <h2>Job Title</h2>
+	  <p>This is a sample resume for demostrating the usage of css for formating html</p>
 	</header>
 	<main>
 	  <section>
