--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Henry Yim | Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Henry Yim | Sample Resume</title>
 	<link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
