--- a/index.html
+++ b/index.html
@@ -4,57 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Henry Yim | Sample Resume</title>
+	<link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
-	  <img src="images/HenryYim_3.JPG" alt="Henry Yim">
-	  <h1>Henry Yim</h1>
-	  <h2>Job Title</h2>
-	  <p>This is a sample resume for demostrating the usage of css for formating html</p>
+	  <div class="content-wrap">
+  	    <img src="images/HenryYim_3.JPG" alt="Henry Yim" height="250px">
+	    <h1>Henry Yim</h1>
+	    <h2>Title</h2>
+	    <p>This is a sample resume for demostrating the usage of css for formating html</p>
+	  </div>
 	</header>
 	<main>
-	  <section>
-		<h2>Work Experience</h2>
-		<h3>Job title 1</h3>
-		<p>Company name</p>
-		<p>Date</p>
-		<p>Job summary</p>
-		<p>Optional list:</p>
-		<ul>
-		  <li>Created...</li>
-		  <li>Lead...</li>
-		  <li>Responsible for...</li>
-		</ul>
-		<h3>Job title 2</h3>
-		<p>Company name</p>
-		<p>Date</p>
-		<p>Job summary</p>
-		<p>Optional list:</p>
-		<ul>
-		  <li>Created...</li>
-		  <li>Lead...</li>
-		  <li>Responsible for...</li>
-		</ul>
+	  <section class="work">
+        <div class="content-wrap">
+			<h2>Work Experience</h2>
+			<h3>Analyst Programmer</h3>
+			<p>iSquare Asia Ltd.</p>
+			<p>Jul 2000 - May 2002</p>
+			<p>Job summary</p>
+			<ul>
+			  <li>Reported to the development manager</li>
+			  <li>Led a small team of 3 developers to build several web-based C2C sales platform</li>
+			  <li>Led a China development team of 6+ resources in Beijing to build an intranet application in Healthcare
+	business</li>
+			  <li>Involved in system design, data modeling, coding and testing and implementation</li>
+			</ul>
+			<h3>Analyst Programmer</h3>
+			<p>Infocast Ltd.</p>
+			<p>Jan 1999 - Jun 2000</p>
+			<p>Job summary</p>
+			<ul>
+			  <li>Involved in system design, coding and implementation of real-time stock quote and trading application for
+	Hong Kong stock market</li>
+			</ul>
+			<h3>Programmer</h3>
+			<p>Hutchison Telecommunications Ltd.</p>
+			<p>Sep 1997 - Dec 1998</p>
+			<p>Job summary</p>
+			<ul>
+			  <li>Involved in coding, testing and implementation of fixed network phone billing system</li>
+			</ul>
+        </div>
 	  </section>
-	  <section>
-		<h2>Education</h2>
-		<h3>Schoolname, year you attended</h3>
-		<p>Designation received</p>
-		<p>Summary</p>
-		<h3>Schoolname 2, year you attended</h3>
-		<p>Designation received</p>
-		<p>Summary</p>
+	  <section class="education">
+        <div class="content-wrap">
+			<h2>Education</h2>
+			<h3>The Chinese University of Hong Kong, 1999-2000</h3>
+			<p>Master of Science in Information Engineering</p>
+			<p>Summary Master of Information Engineering</p>
+			<h3>The Hong Kong University of Science and Technology, 1994-1997</h3>
+			<p>Bachelor of Science in Computer Science</p>
+		</div>
 	  </section>
 	</main>
 	<footer>
+	  <div class="content-wrap">
 		<h2>Contact me!</h2>
-		<div>
+		<div class="contact-info">
           <a href="mailto:yimhingkwong@gmail.com">Email</a>
  		  <a href="https://github.com/henryhkyim">GitHub</a>
 		  <a href="https://www.linkedin.com/in/henry-yim-a1091a5">LinkedIn</a>
 		</div>
-		<p>Copyright &copy 2018</P
+		<p>Copyright &copy 2018 by Henry Yim</p>
+	  </div>
 	</footer>
   </body>
 </html>
