styling the header image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
 	  <div class="content-wrap">
-  	    <img src="images/HenryYim_3.JPG" alt="Henry Yim" height="250px">
+  	    <img class="profile-img" src="images/HenryYim_3.JPG" alt="Henry Yim">
 	    <h1>Henry Yim</h1>
 	    <h2>Title</h2>
 	    <p>This is a sample resume for demostrating the usage of css for formating html</p>
