add styling for work experience sections

--- a/index.html
+++ b/index.html
@@ -10,42 +10,56 @@
   <body>
     <header>
 	  <div class="content-wrap">
-  	    <img class="profile-img" src="images/HenryYim_3.JPG" alt="Henry Yim">
-	    <h1>Henry Yim</h1>
-	    <h2>Title</h2>
-	    <p>This is a sample resume for demostrating the usage of css for formating html</p>
+  	    <img class="profile-img col-narrow" src="images/HenryYim_3.JPG" alt="Henry Yim">
+		<div class="col-wide">
+			<h1>Henry Yim</h1>
+			<h2>Title</h2>
+			<p>This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html</p>
+		</div>
 	  </div>
 	</header>
 	<main>
 	  <section class="work">
         <div class="content-wrap">
 			<h2>Work Experience</h2>
-			<h3>Analyst Programmer</h3>
-			<p>iSquare Asia Ltd.</p>
-			<p>Jul 2000 - May 2002</p>
-			<p>Job summary</p>
-			<ul>
-			  <li>Reported to the development manager</li>
-			  <li>Led a small team of 3 developers to build several web-based C2C sales platform</li>
-			  <li>Led a China development team of 6+ resources in Beijing to build an intranet application in Healthcare
-	business</li>
-			  <li>Involved in system design, data modeling, coding and testing and implementation</li>
-			</ul>
-			<h3>Analyst Programmer</h3>
-			<p>Infocast Ltd.</p>
-			<p>Jan 1999 - Jun 2000</p>
-			<p>Job summary</p>
-			<ul>
-			  <li>Involved in system design, coding and implementation of real-time stock quote and trading application for
-	Hong Kong stock market</li>
-			</ul>
-			<h3>Programmer</h3>
-			<p>Hutchison Telecommunications Ltd.</p>
-			<p>Sep 1997 - Dec 1998</p>
-			<p>Job summary</p>
-			<ul>
-			  <li>Involved in coding, testing and implementation of fixed network phone billing system</li>
-			</ul>
+			<div class="col-narrow">
+				<h3>Analyst Programmer</h3>
+				<p>iSquare Asia Ltd.</p>
+				<p>Jul 2000 - May 2002</p>
+			</div>
+			<div class="col-wide">
+				<p>Job summary</p>
+				<ul>
+				  <li>Reported to the development manager</li>
+				  <li>Led a small team of 3 developers to build several web-based C2C sales platform</li>
+				  <li>Led a China development team of 6+ resources in Beijing to build an intranet application in Healthcare
+		business</li>
+				  <li>Involved in system design, data modeling, coding and testing and implementation</li>
+				</ul>
+			</div>
+			<div class="col-narrow">
+				<h3>Analyst Programmer</h3>
+				<p>Infocast Ltd.</p>
+				<p>Jan 1999 - Jun 2000</p>
+			</div>
+			<div class="col-wide">
+				<p>Job summary</p>
+				<ul>
+				  <li>Involved in system design, coding and implementation of real-time stock quote and trading application for
+		Hong Kong stock market</li>
+				</ul>
+			</div>
+			<div class="col-narrow">
+				<h3>Programmer</h3>
+				<p>Hutchison Telecommunications Ltd.</p>
+				<p>Sep 1997 - Dec 1998</p>
+			</div>
+			<div class="col-wide">
+				<p>Job summary</p>
+				<ul>
+				  <li>Involved in coding, testing and implementation of fixed network phone billing system</li>
+				</ul>
+			</div>
         </div>
 	  </section>
 	  <section class="education">
