Update profile image

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
 	  <div class="content-wrap">
-  	    <img class="profile-img col-narrow" src="images/HenryYim_3.JPG" alt="Henry Yim">
+  	    <img class="profile-img col-narrow" src="https://avatars2.githubusercontent.com/u/40025988?s=460&v=4" alt="Henry Yim">
 		<div class="col-wide">
 			<h1>Henry Yim</h1>
 			<h2>Title</h2>
-			<p>This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html</p>
+			<p>This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html This is a sample resume for demostrating the usage of css for formating html</p>
 		</div>
 	  </div>
 	</header>
@@ -28,7 +28,6 @@
 				<p>Jul 2000 - May 2002</p>
 			</div>
 			<div class="col-wide">
-				<p>Job summary</p>
 				<ul>
 				  <li>Reported to the development manager</li>
 				  <li>Led a small team of 3 developers to build several web-based C2C sales platform</li>
@@ -43,7 +42,6 @@
 				<p>Jan 1999 - Jun 2000</p>
 			</div>
 			<div class="col-wide">
-				<p>Job summary</p>
 				<ul>
 				  <li>Involved in system design, coding and implementation of real-time stock quote and trading application for
 		Hong Kong stock market</li>
@@ -55,7 +53,6 @@
 				<p>Sep 1997 - Dec 1998</p>
 			</div>
 			<div class="col-wide">
-				<p>Job summary</p>
 				<ul>
 				  <li>Involved in coding, testing and implementation of fixed network phone billing system</li>
 				</ul>
